// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FormRow Default 1`] = `
<form>
  <div
    className="sc-bwzfXH fdTlHl"
  >
    <div
      className="sc-bwzfXH lkpHKK"
    >
      <label>
        <div
          className="sc-bwzfXH cAZkVZ"
        >
          <p
            className="sc-bxivhb jpexxn"
          >
            What is your name?
          </p>
        </div>
        <p
          className="sc-bxivhb jVDCXG"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti non quasi similique sint quae exercitationem molestiae aspernatur cum. Necessitatibus, corrupti veritatis. Placeat, tempora! Vitae rem, nobis rerum natus odit debitis.
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH fQHYuO"
    >
      <div
        className="sc-bwzfXH ePpNVI"
      >
        <div
          className="sc-bwzfXH cAZkVZ"
        >
          <div
            className="sc-bwzfXH kxsXCq"
          >
            <div
              className="sc-kkGfuU ikROjB"
              disabled={undefined}
              onBlurCapture={[Function]}
              onClick={[Function]}
              onFocusCapture={[Function]}
            >
              <div
                className="sc-hMqMXs jGzyVm"
                disabled={undefined}
              >
                <span
                  className="sc-kEYyzF eTfXvk"
                >
                  Initials
                </span>
              </div>
              <input
                className="sc-eNQAEJ kadEUO"
                disabled={undefined}
                id={undefined}
                name="Initials"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sc-bwzfXH fkLxMw"
          >
            <div
              className="sc-kkGfuU ikROjB"
              disabled={undefined}
              onBlurCapture={[Function]}
              onClick={[Function]}
              onFocusCapture={[Function]}
            >
              <div
                className="sc-hMqMXs jGzyVm"
                disabled={undefined}
              >
                <span
                  className="sc-kEYyzF eTfXvk"
                >
                  First name
                </span>
              </div>
              <input
                className="sc-eNQAEJ kadEUO"
                disabled={undefined}
                id={undefined}
                name="First name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="sc-bwzfXH hoLhPq"
        >
          <div
            className="sc-kkGfuU ikROjB"
            disabled={undefined}
            onBlurCapture={[Function]}
            onClick={[Function]}
            onFocusCapture={[Function]}
          >
            <div
              className="sc-hMqMXs jGzyVm"
              disabled={undefined}
            >
              <span
                className="sc-kEYyzF eTfXvk"
              >
                Surname
              </span>
            </div>
            <input
              className="sc-eNQAEJ kadEUO"
              disabled={undefined}
              id={undefined}
              name="Surname"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH fdTlHl"
  >
    <div
      className="sc-bwzfXH lkpHKK"
    >
      <label>
        <div
          className="sc-bwzfXH cAZkVZ"
        >
          <p
            className="sc-bxivhb jpexxn"
          >
            Where do you live?
          </p>
        </div>
        <p
          className="sc-bxivhb jVDCXG"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti non quasi similique sint quae exercitationem molestiae aspernatur cum. Necessitatibus, corrupti veritatis. Placeat, tempora! Vitae rem, nobis rerum natus odit debitis.
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH fQHYuO"
    >
      <div
        className="sc-bwzfXH ePpNVI"
      >
        <div
          className="sc-bwzfXH hoLhPq"
        >
          <div
            className="sc-kkGfuU ikROjB"
            disabled={undefined}
            onBlurCapture={[Function]}
            onClick={[Function]}
            onFocusCapture={[Function]}
          >
            <div
              className="sc-hMqMXs jGzyVm"
              disabled={undefined}
            >
              <span
                className="sc-kEYyzF eTfXvk"
              >
                Country
              </span>
            </div>
            <input
              className="sc-eNQAEJ kadEUO"
              disabled={undefined}
              id={undefined}
              name="Country"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="sc-bwzfXH hoLhPq"
        >
          <div
            className="sc-kkGfuU ikROjB"
            disabled={undefined}
            onBlurCapture={[Function]}
            onClick={[Function]}
            onFocusCapture={[Function]}
          >
            <div
              className="sc-hMqMXs jGzyVm"
              disabled={undefined}
            >
              <span
                className="sc-kEYyzF eTfXvk"
              >
                City
              </span>
            </div>
            <input
              className="sc-eNQAEJ kadEUO"
              disabled={undefined}
              id={undefined}
              name="City"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH fdTlHl"
  >
    <div
      className="sc-bwzfXH lkpHKK"
    >
      <label>
        <div
          className="sc-bwzfXH cAZkVZ"
        >
          <p
            className="sc-bxivhb jpexxn"
          >
            Can a boolean only be either true or false?
          </p>
        </div>
        <p
          className="sc-bxivhb jVDCXG"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti non quasi similique sint quae exercitationem molestiae aspernatur cum. Necessitatibus, corrupti veritatis. Placeat, tempora! Vitae rem, nobis rerum natus odit debitis.
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH fQHYuO"
    >
      <div
        className="sc-bwzfXH ewkCPx"
      >
        <div
          className="sc-bwzfXH hurwPi"
        >
          <div
            className="sc-dxgOiQ jgkVHV"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH kcWmUX"
            >
              <div
                checked={true}
                className="sc-jKJlTe fOEGOE"
              >
                <input
                  checked={true}
                  className="sc-ckVGcZ fpRnfv"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="1"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                True
              </label>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH jQPdWH"
        >
          <div
            className="sc-dxgOiQ jgkVHV"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH kcWmUX"
            >
              <div
                checked={false}
                className="sc-jKJlTe dUZzPu"
              >
                <input
                  checked={false}
                  className="sc-ckVGcZ fpRnfv"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="2"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                False
              </label>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH jQPdWH"
        >
          <div
            className="sc-dxgOiQ jgkVHV"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH kcWmUX"
            >
              <div
                checked={false}
                className="sc-jKJlTe dUZzPu"
              >
                <input
                  checked={false}
                  className="sc-ckVGcZ fpRnfv"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="3"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                Sometimes
              </label>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots FormRow No Descriptions 1`] = `
<form>
  <div
    className="sc-bwzfXH fdTlHl"
  >
    <div
      className="sc-bwzfXH lkpHKK"
    >
      <label>
        <p
          className="sc-bxivhb jpexxn"
        >
          What is your name?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH fQHYuO"
    >
      <div
        className="sc-bwzfXH ePpNVI"
      >
        <div
          className="sc-bwzfXH iFjvZT"
        >
          <div
            className="sc-kkGfuU ikROjB"
            disabled={undefined}
            onBlurCapture={[Function]}
            onClick={[Function]}
            onFocusCapture={[Function]}
          >
            <div
              className="sc-hMqMXs jGzyVm"
              disabled={undefined}
            >
              <span
                className="sc-kEYyzF eTfXvk"
              >
                Name
              </span>
            </div>
            <input
              className="sc-eNQAEJ kadEUO"
              disabled={undefined}
              id={undefined}
              name="Name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH fdTlHl"
  >
    <div
      className="sc-bwzfXH lkpHKK"
    >
      <label>
        <p
          className="sc-bxivhb jpexxn"
        >
          Where do you live?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH fQHYuO"
    >
      <div
        className="sc-bwzfXH ePpNVI"
      >
        <div
          className="sc-bwzfXH iFjvZT"
        >
          <div
            className="sc-kkGfuU ikROjB"
            disabled={undefined}
            onBlurCapture={[Function]}
            onClick={[Function]}
            onFocusCapture={[Function]}
          >
            <div
              className="sc-hMqMXs jGzyVm"
              disabled={undefined}
            >
              <span
                className="sc-kEYyzF eTfXvk"
              >
                Country
              </span>
            </div>
            <input
              className="sc-eNQAEJ kadEUO"
              disabled={undefined}
              id={undefined}
              name="Country"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH fdTlHl"
  >
    <div
      className="sc-bwzfXH lkpHKK"
    >
      <label>
        <p
          className="sc-bxivhb jpexxn"
        >
          Can a boolean only be true or false?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH fQHYuO"
    >
      <div
        className="sc-bwzfXH ewkCPx"
      >
        <div
          className="sc-bwzfXH hurwPi"
        >
          <div
            className="sc-dxgOiQ jgkVHV"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH kcWmUX"
            >
              <div
                checked={true}
                className="sc-jKJlTe fOEGOE"
              >
                <input
                  checked={true}
                  className="sc-ckVGcZ fpRnfv"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="1"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                True
              </label>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH jQPdWH"
        >
          <div
            className="sc-dxgOiQ jgkVHV"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH kcWmUX"
            >
              <div
                checked={false}
                className="sc-jKJlTe dUZzPu"
              >
                <input
                  checked={false}
                  className="sc-ckVGcZ fpRnfv"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="2"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                False
              </label>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH jQPdWH"
        >
          <div
            className="sc-dxgOiQ jgkVHV"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH kcWmUX"
            >
              <div
                checked={false}
                className="sc-jKJlTe dUZzPu"
              >
                <input
                  checked={false}
                  className="sc-ckVGcZ fpRnfv"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="3"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                Sometimes
              </label>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH fdTlHl"
  >
    <div
      className="sc-bwzfXH lkpHKK"
    >
      <label>
        <p
          className="sc-bxivhb jpexxn"
        >
          Do you like toggles?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH fQHYuO"
    >
      <div
        className="sc-eHgmQL glhXRz"
        onClick={[Function]}
      >
        <div
          className="sc-bwzfXH cAZkVZ"
        >
          <div
            className="sc-bwzfXH kjVuAD"
          >
            <div
              checked={false}
              className="sc-hSdWYo jZPdTI"
              disabled={undefined}
            >
              <input
                checked={false}
                className="sc-iAyFgw iqMlLU"
                disabled={false}
                id="toggle"
                name="toggle"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="checkbox"
                value="toggle"
              />
            </div>
          </div>
          <div
            className="sc-bwzfXH fmiztD"
          >
            <p
              className="sc-bxivhb jpexxn"
            >
               
              Toggle to indicate your preference!
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH fdTlHl"
  >
    <div
      className="sc-bwzfXH lkpHKK"
    >
      <label>
        <p
          className="sc-bxivhb jpexxn"
        >
          Do you like checkboxes
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH fQHYuO"
    >
      <div
        className="sc-cSHVUG dCtEcY"
        onClick={[Function]}
      >
        <div
          className="sc-bwzfXH hBZDfE"
        />
        <input
          checked={false}
          className="sc-jzJRlG gxbNVW"
          id={undefined}
          name="foo"
          onBlur={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="checkbox"
          value="bar"
        />
      </div>
    </div>
  </div>
</form>
`;
